--- a/custom_components/esp32_robot/manifest.json
+++ b/custom_components/esp32_robot/manifest.json
@@ -2,10 +2,10 @@
   "domain": "esp32_robot",
   "name": "ESP32 Robot",
   "documentation": "https://github.com/yourusername/esp32_robot",
-  "dependencies": ["frontend"],
+  "dependencies": ["frontend", "http"],
   "codeowners": ["@yourusername"],
   "requirements": [],
   "iot_class": "local_polling",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "config_flow": true
 } 
