--- a/custom_components/esp32_robot/manifest.json
+++ b/custom_components/esp32_robot/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "esp32_robot",
   "name": "ESP32 Robot",
-  "documentation": "https://github.com/yourusername/esp32_robot",
-  "dependencies": ["frontend", "http"],
-  "codeowners": ["@yourusername"],
+  "documentation": "https://github.com/positron96/hass-esp32-robot",
+  "issue_tracker": "https://github.com/positron96/hass-esp32-robot/issues",
+  "dependencies": [],
+  "codeowners": ["@positron96"],
   "requirements": [],
   "iot_class": "local_polling",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "config_flow": true
 } 
