--- a/custom_components/esp32_robot/manifest.json
+++ b/custom_components/esp32_robot/manifest.json
@@ -6,7 +6,7 @@
   "dependencies": ["frontend", "http"],
   "codeowners": ["@positron96"],
   "requirements": [],
-  "iot_class": "local_polling",
-  "version": "0.6.6",
-  "config_flow": true
+  "config_flow": true,
+  "version": "0.6.7",
+  "iot_class": "local_polling"
 } 
