--- a/custom_components/esp32_robot/manifest.json
+++ b/custom_components/esp32_robot/manifest.json
@@ -1,12 +1,11 @@
 {
   "domain": "esp32_robot",
   "name": "ESP32 Robot",
-  "documentation": "https://github.com/positron96/hass-esp32-robot",
-  "issue_tracker": "https://github.com/positron96/hass-esp32-robot/issues",
-  "dependencies": ["frontend", "http"],
-  "codeowners": ["@positron96"],
+  "documentation": "https://github.com/yourusername/esp32_robot",
+  "dependencies": [],
+  "codeowners": ["@yourusername"],
   "requirements": [],
-  "config_flow": true,
-  "version": "0.7.4",
-  "iot_class": "local_polling"
+  "iot_class": "local_polling",
+  "version": "0.10.0",
+  "config_flow": true
 } 
